--- a/index.html
+++ b/index.html
@@ -9,19 +9,36 @@
         #cardcontainer{
             display: flex;
             justify-content: center;
+
         }
         .card{
             margin: 10px;
+            background-color: black;
+            color: white;
         }
 
         .card img{
             height: 200px;
         }
         body{
-          background-color: aquamarine;
+          background-color: rgb(198, 207, 207);
         }
-        a:visited{
-          color: blueviolet
+
+        body::-webkit-scrollbar {
+       display: none;
+        }
+        
+        a{
+          color: rgb(172, 123, 123)
+        }
+        .container-fluid{
+          background-color: rgb(162, 184, 184);
+        }
+        .lead{
+          font-size: medium;
+        }
+        .foot{
+          background-color: rgb(0, 0, 0);
         }
     </style>
   </head>
@@ -59,7 +76,7 @@
   
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
       <div class="row">
-        <div class="col-12 col-md">
+        <div class="foot">
           <small class="d-block mb-3 text-muted">&copy; <a href="https://www.linkedin.com/in/sudhanshu-singh-540133229/">Sudhanshu Singh</a></small>
         </div>
       </div>
